parse cas